# selflytics

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  MYPY_SETUP_INSTRUCTIONS.md  README.md  firebase.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: manual-testing-guide.md
.claude/commands/: commit.md  proceed.md  reflect.md
.github/workflows/: cd.yml  ci.yml  claude-code-review.yml  preview-cleanup.yml  preview.yml
backend/: .dockerignore  .env.example  .env.local.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  telemetry_config.py
backend/app/auth/: dependencies.py  jwt.py  password.py
backend/app/db/: firestore_client.py
backend/app/middleware/: telemetry.py
backend/app/models/: chat.py  conversation.py  cost_tracking.py  garmin_data.py  garmin_token.py  user.py
backend/app/prompts/: __init__.py  chat_agent.py
backend/app/routes/: auth.py  chat.py  dashboard.py  garmin.py
backend/app/services/: chat_service.py  conversation_service.py  garmin_client.py  garmin_service.py  garth_wrapper.py  user_service.py
backend/app/templates/: base.html  chat.html  dashboard.html  login.html  register.html  settings.html  settings_garmin.html
backend/app/templates/error/: 403.html  404.html  500.html
backend/app/templates/fragments/: csrf_error.html  garmin_link_form.html  garmin_linked_success.html  garmin_sync_error.html  garmin_sync_success.html  login_form.html  register_form.html
backend/app/utils/: cache.py  cost_tracking.py  encryption.py  redact.py  request_helpers.py
backend/tests/: conftest.py
backend/tests/e2e/: test_chat_user_journeys.py  test_deployed_user_journey.py
backend/tests/e2e_playwright/: conftest.py  test_alpine_state.py  test_chat_ui_navigation.py  test_csrf_protection.py  test_form_validation.py  test_garmin_linking_journey.py  test_htmx_interactions.py  test_settings_navigation.py  test_user_journeys.py
backend/tests/helpers/: mock_helpers.py
backend/tests/integration/: test_auth_htmx.py  test_auth_middleware.py  test_auth_routes.py  test_chat_agent_tools.py  test_chat_business_requirements.py  test_chat_error_scenarios.py  test_chat_routes.py  test_chat_tool_calling.py  test_chat_ui_routes.py  test_chat_ui_templates.py  test_csrf_routes.py  test_error_templates.py  test_garmin_htmx.py  test_garmin_oauth.py  test_garmin_routes.py  test_manual_testing_bugs.py  test_root_url_routing.py  test_user_journey_comparison.py  test_user_journey_goal_inquiry.py  test_user_journey_multi_turn.py  test_user_journey_performance.py  test_user_journey_quick_checkin.py  test_user_journey_recovery.py  test_user_journey_returning_user.py
backend/tests/unit/: test_cache.py  test_chat_models.py  test_chat_service.py  test_chat_tools.py  test_config.py  test_conversation_model.py  test_conversation_service.py  test_cost_tracking.py  test_csrf.py  test_encryption.py  test_exception_handlers.py  test_firestore_client.py  test_garmin_client.py  test_garmin_models.py  test_garmin_service_user_profile.py  test_garmin_token_model.py  test_garth_wrapper.py  test_jwt.py  test_password.py  test_template_data_testids.py  test_template_rendering.py  test_user_model.py  test_user_service.py
backend/tests/unit/services/: test_garmin_service_daily_metrics.py
backend/tests/unit/templates/: test_chat_navigation.py  test_garmin_fragment_structure.py
backend/tests/unit/utils/: test_request_helpers.py
docs/: DEVELOPMENT_WORKFLOW.md  GARMIN_AGENTS_EXPLORATION.md  README.md  REUSABLE_PATTERNS_GUIDE.md  SELFLYTICS_SPECIFICATION.md
docs/development/: MANUAL_TESTING_RUNSHEET.md
docs/development/chat-ui/: PHASE_1_plan.md  PHASE_2_plan.md  PHASE_3_plan.md  PHASE_4_plan.md  ROADMAP.md  SPECIFICATION.md  TODO.md
docs/development/csrf/: CSRF_SPECIFICATION.md  PHASE_1_plan.md  (+4 more)
docs/development/csrf-improvements/: PHASE_1_plan.md  PHASE_2_plan.md  PHASE_3_plan.md  ROADMAP.md  SPECIFICATION.md
docs/project-setup/: MYPY_MIGRATION_NOTES.md  PHASE_1_plan.md  PHASE_2_plan.md  PHASE_3_plan.md  PHASE_4_COVERAGE_INVESTIGATION.md  PHASE_4_RESUME.md  PHASE_4_REVIEW.md  PHASE_4_SESSION_1_PROGRESS.md  PHASE_4_plan.md  ROADMAP.md  SPIKE_plan.md  TERRAFORM_DEPLOYMENT_STEPS.md
infra/: README.md
infra/scripts/: check-preview-limit.sh  sanitize-branch-name.sh
scripts/: README.md  debug_arithmetic_expansion.py  debug_e2e_htmx_swap_2025_11_14.py  debug_route_handler_blocking.py  debug_route_interception_simple.py  debug_validation_exit.py  dev-server.sh  investigation_report_2025_11_15.md  local-e2e-server.sh  setup-worktree.sh  validate-deployment.sh  validate-gcp-setup.sh  verify_root_cause.py
spike/: .env.example  DECISION.md  README.md  chat_agent.py  garmin_client.py  main.py  pyproject.toml  viz_generator.py
spike/tests/: test_integration.py
static/: README.md
(+22 files in other folders)
